--- a/stats/css/style.css
+++ b/stats/css/style.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 /* CSS Document */
-/*
+
 	.alice{background: #FCFDFE;}
     .blue1{background: #DAE4E8;}
     .blue2{background: #D6DFE4;}
@@ -10,13 +10,14 @@
 	.ath{background: #AF2719;}
 	.ath2{background: #EB3422;}
 	.ath3{background: #FF6152;}
-	
+/*	
 	font-family: 'Open Sans', sans-serif;
 	font-family: 'Slabo 27px', serif;
 */
 
 *{
 	font-family: 'Open Sans', sans-serif;
+	padding:0;
 }
 html, body{
 	margin:0 auto;
@@ -31,7 +32,7 @@ ul, li{
 	margin:0 auto;
 }
 a,a:visited{
-	color:#8C898A;
+	color:#B7C0C4;
 	text-decoration:none;
 }
 
@@ -41,16 +42,62 @@ body{
 header{
 	margin:0 auto;
 	padding:0;
+	border-bottom:solid 1px #DAE4E8;
+	box-sizing:border-box;
+	overflow:hidden;
 }
+	.logo-div{
+		display:block;
+		float:left;
+		width:400px;
+		margin-left:50px;
+		box-sizing:border-box;
+	}
+		h1{
+			display:table;
+			margin:0;
+			width:400px;
+			box-sizing:border-box;
+			vertical-align:middle;
+		}
+			h1 a{
+				color:#6E7D85 !important;
+				display:block;
+				position:relative;
+				box-sizing:content-box;
+			}
+				h1 img{
+					width:50px;
+					position:absolute;
+					margin:8px 10px 8px 10px;
+					top:0;
+					bottom:0;
+					left:0;
+					right:0;
+				}
+				h1 span{
+					display:block;
+					position:absolute;
+					line-height:60px;
+					top:0;
+					bottom:0;
+					left:75px;
+					right:0;
+				}
 	.menu{
 		margin:0 auto;
+		width:500px;
 		padding:0;
+		display:block;
+		box-sizing:border-box;
+		overflow:hidden;
 	}
 		.menu-ul{
 			margin:0 auto;
 			padding:0;
 			overflow:hidden;
-			border-bottom:solid 1px #DAE4E8;
+			display:block;
+			box-sizing:border-box;
 		}
 			.menu-li{
 				padding:0;
@@ -58,12 +105,6 @@ header{
 				position:relative;
 				text-align:center;
 				overflow:hidden;
-			}
-			
-			.menu-li::before{
-				content:'';
-			}
-			.menu-li::after{
 			}
 				.menu-a{
 					position:relative;
@@ -73,8 +114,22 @@ header{
 					overflow:visible;
 					font-weight:600;
 					transition:all ease-out .2s;
+					box-sizing:border-box;
 				}
-				.menu-a::after{	
+				.menu-a-active{
+					box-sizing:border-box;
+					color:#6E7D85 !important;
+				}
+				.menu-a-active::after{
+					bottom:0 !important;
+					content:'';
+					position:absolute;
+					width:100%;
+					height:5px;
+					left:0%;
+					border-bottom:solid #FF6152 5px;
+				}
+				.menu-a-no::after{
 					content:'';
 					position:absolute;
 					width:100%;
@@ -88,5 +143,5 @@ header{
 					bottom:0;
 				}
 				.menu-a:hover{
-					
+					color:#6E7D85;
 				}
