--- a/stats/css/style.css
+++ b/stats/css/style.css
@@ -395,6 +395,46 @@ main{
 	}
 
 
+/*--------------------------- INTRANET ---------------------------*/
+.intranet-grid{
+	width:940px;
+	box-sizing:border-box;
+	margin:50px auto;
+	display:block;
+	overflow:hidden;
+}
+	.box-intranet{
+		width:300px;
+		height:300px;
+		float:left;
+		box-sizing:border-box;
+		position:relative;
+		background:#E2F0FA;
+		transition:all ease-in-out .2s;
+	}
+	.box-intranet:hover{
+		background:#97ABB9;
+	}
+	.middle-box{
+		margin:0 20px;
+	}
+		.grid-title-intranet{
+			position:absolute;
+			width:100%;
+			display:block;
+			bottom:0;
+			text-transform:uppercase;
+			text-align:center;
+			padding:10px;
+			margin:0 auto;
+			color:#4B5862;
+			font-weight:600;
+		}
+		.icon-intranet{
+			width:100%;
+			box-sizing:border-box;
+			padding:10px 30px 30px 30px;
+		}
 /*--------------------------- NEW PLAYER ---------------------------*/
 .add-player{
 	overflow:hidden;
@@ -428,7 +468,7 @@ form[name="new-player-form"] input, select, label {
 		border-bottom:#97ABB9 1px solid;
 		box-shadow:0px 1px 1px #97ABB9;
 	}
-	input[type="select"] , input[type="file"] , input[type="radio"]{
+	form[name="new-player-form"] input[type="select"] , input[type="file"] , input[type="radio"]{
 		border:none !important;
 		box-shadow:none !important;
 	}
@@ -452,9 +492,72 @@ form[name="new-player-form"] input, select, label {
 			float:left;
 			text-align:left;
 			width:100px;
-			border:2px #000 solid;
 		}
 
+
+/*--------------------------- LIST PLAYERS ---------------------------*/
+.container-jugadores{
+	width:940px;
+	margin:0 auto;
+}
+	.jugadores-row{
+		width:100%;
+		height:120px;
+		display:block;
+		overflow:hidden;
+	}
+		.jugadores-foto{
+			border-radius:100%;
+			box-sizing:border-box;
+			display:inline-block;
+			overflow:hidden;
+			float:left;
+			width:100px;
+			height:100px;
+			margin:10px;
+		}
+		.jugadores-nombre{
+			font-weight:600;
+			display:inline-block;
+			float:left;
+			height:100%;
+		}
+			.jugadres-nombre p{
+				display:inline-block;
+				height:100%;
+			}
+		.jugadores-equipo{
+			height:50px;
+			display:inline-block;
+			float:left;
+		}
+			.jugadores-equipo img{
+				height:100%;
+				float:left;
+				display:block;
+			}
+			.jugadores-equipo p{
+				float:left;
+			}
+		.list-jugadores-buttons{
+			float:left;
+			display:inline-block;
+		}
+			.list-jugadores-buttons a{
+				display:inline-block;
+			}
+
+
+/*--------------------------- LIST PLAYERS ---------------------------*/
+form[name="mod-player"]{
+	width:940px;
+	margin:0 auto;
+	padding-top:50px;
+	overflow:hidden;
+}
+	form[name="mod-player"] input{
+		
+	}
 
 /* Tooltip */
 .test + .tooltip > .tooltip-inner {
